--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -7,7 +7,7 @@
     - name: Rails Girls
       time: TBA
       place: TBA
-      image: dititle.png
+      image: railsgirls.png
       text: Achas que a Informatica é só para homens? Pois engana-te! Elas andam ai, e em peso! Se és uma rapariga interessada em Informatica e gostavas de aprender um bocado mais sobre ruby, isto é para ti!
 
 - monday:
@@ -20,7 +20,7 @@
       time: TBA-TBA
       place: TBA
       speaker: TBA
-      image: dititle.png
+      image: html_css.png
       text: Da lista das coisas que podes usar agora e que o curso não te oferece HTML/CSS esta no topo. Aproveita esta oportunidade de aprender uma ferramenta nova e esta atento as surpresas que temos para ti.
 
 - thuesday:
@@ -34,21 +34,21 @@
       time: TBA-TBA
       place: TBA
       speaker: TBA
-      image: dititle.png
+      image: segurança.png
       text: A Eurotux apresenta-te a primeira de uma série de sessões sobre cibersegurança. Junta-te a nós para aprender os básicos de sistemas e segurança e como os hackers exploram as vulnerabilidades.
 
     - name: Informatica mas que raio
       time: TBA-TBA
       place: TBA
       speaker: TBA
-      image: dititle.png
+      image: informatica_mas_que_raio.png
       text: A Informatica é um hobbie mas não uma vocação? Não és de um curso da área de Informatica mas estas interessado em aprender mais? Aparece, sim estamos a falar para ti! A informatica não é só para nerds! 
 
     - name: Geek Nigth
       time: TBA-TBA
       place: TBA
       speaker: TBA
-      image: dititle.png
+      image: geeknight.png
       text: E porque a semana esta a começar, mas uma pausa sabe sempre bem, aproveita este momento para relaxar, falar com os professores e beber uns copos, negocios negocios, diversão a parte.
 
 - wensday:
@@ -69,8 +69,8 @@
       time: TBA-TBA
       place: TBA
       speaker: TBA
-      image: dititle.png
-      text: A produtividade perfeita e o teu metodo de trabalho é algo a desemvolver durante anos!- toda a gente. Será? <br> É. Mas, estamos aqui para te dar a primeira ajuda, vem descobrir mais sobre produtividade, sobre editores de texto e outras ferramentas e truques que de certeza que te vão ajudar durante o curso.
+      image: informatic_tricks.png
+      text: A produtividade perfeita e o teu metodo de trabalho é algo a desenvolver durante anos!- toda a gente. Será? <br> É. Mas, estamos aqui para te dar a primeira ajuda, vem descobrir mais sobre produtividade, sobre editores de texto e outras ferramentas e truques que de certeza que te vão ajudar durante o curso.
 
 - twursday:
   date: 20 OCT
@@ -79,11 +79,11 @@
   size: A
   activities:    
 
-    - name: Javascrip
+    - name: Javascript
       time: TBA-TBA
       place: TBA
       speaker: TBA
-      image: dititle.png
+      image: javascript.png
       text: JavaScript é uma das linguagens em maior desenvolvimento, com várias frameworks a surgir! Junta-te a Pedro Costa para aprenderes os básicos desta linguagem essencial para o desenvolvimento web.
 
 - friday:
@@ -98,7 +98,7 @@
       place: TBA
       speaker: TBA
       image: dititle.png
-      text: Ao final de uma semana cheia a ultima coisa que te apetece é ires outra vez para dentro de um auditorio. Mete os musculos a mexer conosco e aproveita esta tarde para relaxar, tu mereces champeão.
+      text: Ao final de uma semana cheia a ultima coisa que te apetece é ires outra vez para dentro de um auditorio. Mete os musculos a mexer conosco e aproveita esta tarde para relaxar, tu mereces campeão.
 
 - saturday2:
   date: 22 OCT
@@ -111,5 +111,5 @@
       time: TBA-TBA
       place: TBA
       speaker: TBA
-      image: dititle.png
+      image: coderdojo.png
       text: O CoderDojo Minho é um movimento aberto e sem fins lucrativos para ensinar jovens dos 7 aos 17 a programar. Partilha e aparece caso tenhas interesse em informática.
