--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -1,39 +1,38 @@
 saturday1:
-  - title: CeSIUM Hackathon
+  - title: CoderDojo
     time: 10h-20h
-    place: DI A1
-    image: hackathon.png
-    typeform: https://cesium.typeform.com/to/KJkgiV
-    text: A primeira CeSIUM Hackathon deste ano será competitiva! Passa o sábado connosco no Departamento de Informática a programar o melhor bot que conseguires. O vencedor terá direito a um prémio! O almoço e coffee break são por nossa conta. Há limite de vagas para as inscrições.
-
-  - title: "BragaJS: Meteor Global Distributed Hackathon"
-    time: 11h-11h (24h)
-    place: DI A1
-    image: meteor.png
-    text: Os meetups BragaJS trazem para Portugal uma edição da Meteor Global Distributed Hackathon! Para te inscreveres neste evento, organizado em conjunto com a <a target="_blank" href="http://subvisual.co/">Subvisual</a>, necessitas de te registar no <a target="_blank" href="http://www.meetup.com/bragajs/events/225530868/">Meetup</a> e no <a target="_blank" href="http://info.meteor.com/2015-hackathon">site oficial</a> até 2 de Outubro. Jantar e coffee break são garantidos! Não te esqueças de consultar as regras de submissão.
+    place: GNRation
+    image: coderdojo.png
+    typeform: 
+    text: O CoderDojo Minho é um movimento aberto e sem fins lucrativos para ensinar jovens dos 7 aos 17 a programar. Partilha e aparece caso tenhas interesse em informática.
 
 monday:
   - title: DI Goes Retro
     time: 9h-18h
     place: Átrio do DI
     image: retro.png
-    text: É durante este dia que o Departamento de Informática entra numa máquina do tempo. Os computadores são substituídos pelos seus antecessores dos anos 80 e 90. Aparece para relembrar as raízes da computação através de jogos arcade e um museu aberto!
+    text: É durante este dia que o Departamento de Informática entra numa máquina do tempo. Os computadores são substituídos pelos seus antecessores dos anos 80 e 90. Aparece para relembrar as raízes da computação através de um museu aberto!
 
-  - title: Bash Introduction
-    time: 16h-18h
-    place: DI A1
-    image: bash.png
-    typeform: https://cesium.typeform.com/to/gtDVSe
-    text: Especialmente preparada para os novos utilizadores de Linux, esta palestra para iniciantes prepara-te para a utilização produtiva do terminal.
-    presentation: https://prezi.com/nxv4lyntrudh/cesium-bash-introduction/
+  - title: HTML/CSS
+    time: 17h-19h
+    place: DI A2
+    image: html_css.png
+    typeform: 
+    text: Da lista das coisas que podes usar agora e que o curso não te oferece HTML/CSS esta no topo. Aproveita esta oportunidade de aprender uma ferramenta nova e esta atento as surpresas que temos para ti.
 
 tuesday:
   - title: Segurança
-    time: 17h-19h
-    place: DI A1
-    image: segurança.png
-    typeform: https://cesium.typeform.com/to/jau8Ed
-    text: 'A <a target="_blank" href="http://eurotux.com/">Eurotux</a> apresenta-te a primeira de uma série de sessões sobre cibersegurança. Junta-te a nós para aprender os básicos de sistemas e segurança e como os hackers exploram as vulnerabilidades.'
+    time: 16h-18h
+    place: DI A2
+    image: seguranca.png
+    typeform: 
+    text: 'A <a target="_blank" href="http://eurotux.com/">Eurotux</a> apresenta-te mais uma sessão sobre cibersegurança. Junta-te a nós para aprender os básicos de sistemas e segurança e como os hackers exploram as vulnerabilidades.'
+    
+  - title: Informática mas que raio?!
+    time: TBA
+    place: TBA
+    image: informatictricks.png
+    text: A Informática é um hobbie mas não uma vocação? Não és de um curso da área de Informática mas estas interessado em aprender mais? Aparece, sim estamos a falar para ti! A informática não é só para nerds!
 
   - title: Geek Night
     time: 20h30-22h
@@ -42,28 +41,26 @@ tuesday:
     text: As tradicionais Braga Geek Nights estão de volta! Vamos criar o ambiente ideal para te divertires. Vem ter connosco para um serão de informática e convívio.
 
 wednesday:
-  - title: "Elixir: A Talk for College Students"
-    time: 14h-16h
-    place: DI A1
-    image: elixir.png
-    typeform: https://cesium.typeform.com/to/BVRFSJ
-    text: Elixir é uma das linguagens do momento! Escalável, funcional e tolerante a falhas. Connosco terás uma palestra preparada para ti, com várias comparações com linguagens mais conhecidas.
-    presentation: https://speakerdeck.com/frmendes/elixir-a-talk-for-college-students
+  - title: Day@DI
+    time: 14h-
+    place: DI 0.03
+    image: hackathon.png
+    text: Se alguém de fora do ambiente informático alguma vez te tentar exemplificar o teu ambiente de trabalho, vai estar a descrever esta atividade. Quer sejas um aluno do 1º ano e ainda não saibas nada de informática quer estejas a acabar a tua tese, temos um lugar para ti. O teu lugar é aqui, participa neste dia e compete com outras equipas com os mesmos conhecimentos que tu. Então do que estas a espera para vir reservar lugar?
 
-  - title: JavaScript
+  - title: Informatic Tricks
     time: 16h-18h
-    place: DI A1
-    image: javascript.png
-    typeform: https://cesium.typeform.com/to/qPxrdE
-    text: JavaScript é uma das linguagens em maior desenvolvimento, com várias frameworks a surgir! Junta-te a <a target="_blank" href="https://github.com/pfac">Pedro Costa</a> para aprenderes os básicos desta linguagem essencial para o desenvolvimento web.
+    place: DI A2
+    image: infotricks.png
+    typeform: 
+    text: A produtividade perfeita e o teu método de trabalho é algo a desenvolver durante anos!- toda a gente. Será? <br> É. Mas, estamos aqui para te dar a primeira ajuda, vem descobrir mais sobre produtividade, sobre editores de texto e outras ferramentas e truques que de certeza que te vão ajudar durante o curso.
 
 thursday:
-  - title: Ionic
-    time: 17h-19h
-    place: DI A1
-    image: ionic.png
-    typeform: https://cesium.typeform.com/to/lkBZaK
-    text: Ionic é uma framework mobile que te permite desenvolver apps para iOS e Android, com JavaScript, HTML e CSS. Aparece nesta talk dada pela <a target="_blank" href="http://subvisual.co/">Subvisual</a>!
+  - title: JavaScript
+    time: 16h-18h
+    place: DI A2
+    image: javascript.png
+    typeform: 
+    text: JavaScript é uma das linguagens em maior desenvolvimento, com várias frameworks a surgir! Junta-te a <a target="_blank" href="https://github.com/pfac">Pedro Costa</a> para aprenderes os básicos desta linguagem essencial para o desenvolvimento web.
 
 friday:
   - title: Retro Strikes Again
@@ -72,11 +69,18 @@ friday:
     image: red.png
     text: Se no início da semana não tiveste oportunidade, aproveita e passa pelo Departamento de Informática e relembra a informática de outrora e os bons sons 8-bits que temos para ti.
 
-saturday2:
-  - title: CoderDojo
-    time: 10h-12h
-    place: GNRation
-    image: coderdojo.png
-    typeform: https://coderdojo-minho.typeform.com/to/gwf8nv
-    text: O CoderDojo Minho é um movimento aberto e sem fins lucrativos para ensinar jovens dos 7 aos 17 a programar. Partilha e aparece caso tenhas interesse em informática.
 
+  - title: Recreativo 
+    time: 15h
+    place: TBA
+    image: red.png
+    text: Ao final de uma semana cheia a ultima coisa que te apetece é ires outra vez para dentro de um auditório. Mete os músculos a mexer connosco e aproveita esta tarde para relaxar, tu mereces campeão.
+
+
+saturday2:
+  - title: Rails Girls
+    time: 10h
+    place: DI
+    image: rails.png
+    typeform: 
+    text: Achas que a Informática é só para homens? Pois engana-te! Elas andam ai, e em peso! Se és uma rapariga interessada em Informática e gostavas de aprender um bocado mais sobre Ruby, isto é para ti!
