--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -17,7 +17,7 @@ monday:
     time: 17h-19h
     place: DI A2
     image: html_css.png
-    typeform: 
+    typeform: https://cesium.typeform.com/to/oUft1u
     text: Da lista das coisas que podes usar agora e que o curso não te oferece HTML/CSS esta no topo. Aproveita esta oportunidade de aprender uma ferramenta nova e esta atento as surpresas que temos para ti.
 
 tuesday:
@@ -25,13 +25,14 @@ tuesday:
     time: 16h-18h
     place: DI A2
     image: seguranca.png
-    typeform: 
+    typeform: https://cesium.typeform.com/to/z1STis
     text: 'A <a target="_blank" href="http://eurotux.com/">Eurotux</a> apresenta-te mais uma sessão sobre cibersegurança. Junta-te a nós para aprender os básicos de sistemas e segurança e como os hackers exploram as vulnerabilidades.'
     
   - title: Informática mas que raio?!
     time: TBA
     place: TBA
     image: informatictricks.png
+    typeform: https://cesium.typeform.com/to/E3f80Y
     text: A Informática é um hobbie mas não uma vocação? Não és de um curso da área de Informática mas estas interessado em aprender mais? Aparece, sim estamos a falar para ti! A informática não é só para nerds!
 
   - title: Geek Night
@@ -45,13 +46,14 @@ wednesday:
     time: 14h-
     place: DI 0.03
     image: hackathon.png
+    typeform: https://cesium.typeform.com/to/aXUXNw
     text: Se alguém de fora do ambiente informático alguma vez te tentar exemplificar o teu ambiente de trabalho, vai estar a descrever esta atividade. Quer sejas um aluno do 1º ano e ainda não saibas nada de informática quer estejas a acabar a tua tese, temos um lugar para ti. O teu lugar é aqui, participa neste dia e compete com outras equipas com os mesmos conhecimentos que tu. Então do que estas a espera para vir reservar lugar?
 
   - title: Informatic Tricks
     time: 16h-18h
     place: DI A2
     image: infotricks.png
-    typeform: 
+    typeform: https://cesium.typeform.com/to/L90X0Z
     text: A produtividade perfeita e o teu método de trabalho é algo a desenvolver durante anos!- toda a gente. Será? <br> É. Mas, estamos aqui para te dar a primeira ajuda, vem descobrir mais sobre produtividade, sobre editores de texto e outras ferramentas e truques que de certeza que te vão ajudar durante o curso.
 
 thursday:
@@ -59,7 +61,7 @@ thursday:
     time: 16h-18h
     place: DI A2
     image: javascript.png
-    typeform: 
+    typeform: https://cesium.typeform.com/to/EUBX4S
     text: JavaScript é uma das linguagens em maior desenvolvimento, com várias frameworks a surgir! Junta-te a <a target="_blank" href="https://github.com/pfac">Pedro Costa</a> para aprenderes os básicos desta linguagem essencial para o desenvolvimento web.
 
 friday:
@@ -74,6 +76,7 @@ friday:
     time: 15h
     place: TBA
     image: red.png
+    typeform: https://cesium.typeform.com/to/qdMQiv
     text: Ao final de uma semana cheia a ultima coisa que te apetece é ires outra vez para dentro de um auditório. Mete os músculos a mexer connosco e aproveita esta tarde para relaxar, tu mereces campeão.
 
 
@@ -82,5 +85,5 @@ saturday2:
     time: 10h
     place: DI
     image: rails.png
-    typeform: 
+    typeform: https://cesium.typeform.com/to/HGjxbW
     text: Achas que a Informática é só para homens? Pois engana-te! Elas andam ai, e em peso! Se és uma rapariga interessada em Informática e gostavas de aprender um bocado mais sobre Ruby, isto é para ti!
