--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -29,7 +29,7 @@ tuesday:
     text: 'A <a target="_blank" href="http://eurotux.com/">Eurotux</a> apresenta-te mais uma sessão sobre cibersegurança. Junta-te a nós para aprenderes os básicos de sistemas e segurança e como os hackers exploram as vulnerabilidades.'
     
   - title: Informática, mas que raio?!
-    time: TBA
+    time: 18h-19h
     place: TBA
     image: informatictricks.png
     typeform: https://cesium.typeform.com/to/E3f80Y
