--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -30,7 +30,7 @@ tuesday:
     
   - title: Informática, mas que raio?!
     time: 18h-19h
-    place: TBA
+    place: DI 0.03
     image: informatictricks.png
     typeform: https://cesium.typeform.com/to/E3f80Y
     text: A Informática é um hobbie mas não uma vocação? Não és de um curso da área de Informática mas estás interessado em aprender mais? Então aparece! Sim estamos a falar para ti! A Informática não é só para nerds!
