added info to rails girls

--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -86,4 +86,4 @@ saturday2:
     place: DI A2
     image: rails.png
     typeform: https://cesium.typeform.com/to/HGjxbW
-    text: O Rails Girls é uma iniciativa internacional com o objetivo de atrair mais mulheres para o mundo das tecnologias de informação e de as providenciar com uma poderosa ferramenta para o mercado de trabalho. Venham, a Informática precisa de vocês!
+    text: O Rails Girls é uma iniciativa internacional com o objetivo de atrair mais mulheres para o mundo das tecnologias de informação e de as providenciar com uma poderosa ferramenta para o mercado de trabalho. Venham, a Informática precisa de vocês! Inscrições gratuitas, almoço e coffee break incluídos, só precisas de trazer o teu computador contigo. 
